# -Agent

./: .env.example  .gitignore  README.md  count-lines.ps1  diary  docker-compose.yml  main.py  pyproject.toml  run.ps1  server.py
check_contract_output/: contract_linearized.txt
code_agent_skills/: deep-research-report.md
config/: config.json
core/: __init__.py
core/ai/: __init__.py  agent_loop.py  config.py  json_parser.py  llm_client.py  logger.py  message_store.py  session.py  tasks.py  token_counter.py
core/commands/: __init__.py  cli.py  linearizer.py  parse.py
core/contracts/: __init__.py  compare.py  continuity_service.py  extractor.py  integrity_service.py  models.py  normalize.py  seal_service.py  service.py
core/infrastructure/: __init__.py
core/presentation/: __init__.py
core/shared/: __init__.py  format_output.py  path_utils.py
core/text/: __init__.py  dolma_export.py  linearizer.py  ocr2json.py  pdf2png.py
docs/: devlog-phase2-spring-boot.md
java-backend/: pom.xml
models/: seal_hybrid_v1.json
python-agent/: .dockerignore  Dockerfile  server.py
python-agent/docs/: architecture-decision-record.md  用户使用说明书.md
python-agent/test/: README.md
temp_output/: contract_linearized.txt
test/: test_ai_config_env.py  test_check_basic_info_api_client.py  test_cli_linearizer.py  test_cli_tool_contracts.py  test_dolma_pipeline.py  test_linearizer.py  test_ocr2json_deduplicate.py  test_pdf2ocrjson.py  testocr.py
test/contract/: test_compare_module.py  test_compare_paths.py  (+8 more)
vue-frontend/: index.html  package-lock.json  package.json
(+252 files in other folders)
