[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "contract-review-agent"
version = "0.2.0"
description = "LangGraph based technology contract review service"
requires-python = ">=3.11,<3.13"
dependencies = [
    "chromadb>=1.5,<2",
    "fastapi>=0.135,<1",
    "langchain>=1.3,<2",
    "langchain-classic>=1,<2",
    "langchain-community>=0.4,<1",
    "langchain-core>=1.4,<2",
    "langchain-openai>=1.3,<2",
    "langgraph>=1.2,<2",
    "numpy>=2.4,<3",
    "opencv-python>=4.13,<5",
    "paddleocr>=3.4,<4",
    "pillow>=12,<13",
    "pymupdf>=1.27,<2",
    "python-dotenv>=1.2,<2",
    "sentence-transformers>=5.4,<6",
    "tavily-python>=0.7,<1",
    "textual>=8.2,<9",
    "tls-client>=1,<2",
    "uvicorn>=0.42,<1",
]

[project.optional-dependencies]
dev = [
    "optuna>=4,<5",
    "pytest>=9,<10",
    "scikit-learn>=1.8,<2",
]

[tool.pytest.ini_options]
testpaths = ["test/unit"]
cache_dir = "artifacts/pytest-cache"
